# news-search-app

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.dev.md  compose.dev.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml
src/app/: main.py
src/app/api/endpoints/: keywords.py  news.py
src/app/core/: config.py
src/app/schemas/: keywords.py  news.py
src/app/services/: keywords_service.py
src/app/templates/: index.html
src/repositories/databases/: base.py
src/repositories/databases/remote/: analysis.py  schema.py
